.metadata/.plugins/org.eclipse.cdt.ui/cpp_test.build.log
13:30:25 **** Incremental Build of configuration Debug for project cpp_test ****
make all 
'Building file: ../os/src/sched/clock/clock_gettime.c'
'Invoking: MCU GCC Compiler'
C:\Users\warlo\workspace\cpp_test\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=c11 -DSTM32F469I_DISCO -DUSE_FULL_ASSERT -DSTM32F4 -DSTM32F469NIHx -DSTM32 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F469xx -IC:/Users/warlo/workspace/cpp_test/inc -IC:/Users/warlo/workspace/cpp_test/os/include -IC:/Users/warlo/workspace/cpp_test/CMSIS/core -IC:/Users/warlo/workspace/cpp_test/CMSIS/device -IC:/Users/warlo/workspace/cpp_test/HAL_Driver/Inc/Legacy -IC:/Users/warlo/workspace/cpp_test/HAL_Driver/Inc -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ampire480272 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ampire640480 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/Common -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/cs43l22 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/exc7200 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ft6x06 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ili9325 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ili9341 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/l3gd20 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/lis302dl -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/lis3dsh -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ls016b8uy -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/lsm303dlhc -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/mfxstm32l152 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/n25q128a -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/n25q256a -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/n25q512a -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/otm8009a -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ov2640 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/s25fl512s -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/s5k5cag -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/st7735 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/st7789h2 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/stmpe1600 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/stmpe811 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/ts3510 -IC:/Users/warlo/workspace/cpp_test/Utilities/Components/wm8994 -IC:/Users/warlo/workspace/cpp_test/Utilities/Fonts -IC:/Users/warlo/workspace/cpp_test/Utilities/Log -IC:/Users/warlo/workspace/cpp_test/Utilities -IC:/Users/warlo/workspace/cpp_test/Utilities/STM32469I-Discovery -IC:/Users/warlo/workspace/cpp_test/cpp_test/ustl -IC:/Users/warlo/workspace/cpp_test/nuttx/include -I../cpp_test/ustl -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"os/src/sched/clock/clock_gettime.d" -MT"os/src/sched/clock/clock_gettime.o" -o "os/src/sched/clock/clock_gettime.o" "../os/src/sched/clock/clock_gettime.c"
In file included from ../os/src/sched/clock/clock_gettime.c:43:0:
C:/Users/warlo/workspace/cpp_test/os/include/time.h:11:8: warning: extra tokens at end of #endif directive [-Wendif-labels]
 #endif _OS_TIME_H_
        ^
In file included from ../os/src/sched/clock/clock_gettime.c:49:0:
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:122:47: warning: 'struct tcb_s' declared inside parameter list
 typedef CODE void (*sig_deliver_t)(FAR struct tcb_s *tcb);
                                               ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:224:34: warning: 'struct tcb_s' declared inside parameter list
 void up_initial_state(FAR struct tcb_s *tcb);
                                  ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:264:32: warning: 'struct tcb_s' declared inside parameter list
 int up_create_stack(FAR struct tcb_s *tcb, size_t stack_size, uint8_t ttype);
                                ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:295:29: warning: 'struct tcb_s' declared inside parameter list
 int up_use_stack(FAR struct tcb_s *tcb, FAR void *stack, size_t stack_size);
                             ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:329:37: warning: 'struct tcb_s' declared inside parameter list
 FAR void *up_stack_frame(FAR struct tcb_s *tcb, size_t frame_size);
                                     ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:362:34: warning: 'struct tcb_s' declared inside parameter list
 void up_release_stack(FAR struct tcb_s *dtcb, uint8_t ttype);
                                  ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:384:33: warning: 'struct tcb_s' declared inside parameter list
 void up_unblock_task(FAR struct tcb_s *tcb);
                                 ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:410:43: error: unknown type name 'tstate_t'
 void up_block_task(FAR struct tcb_s *tcb, tstate_t task_state);
                                           ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:455:37: warning: 'struct tcb_s' declared inside parameter list
 void up_reprioritize_rtr(FAR struct tcb_s *tcb, uint8_t priority);
                                     ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:516:39: warning: 'struct tcb_s' declared inside parameter list
 void up_schedule_sigaction(FAR struct tcb_s *tcb, sig_deliver_t sigdeliver);
                                       ^
C:/Users/warlo/workspace/cpp_test/os/include/nuttx/arch.h:1773:42: warning: 'struct tcb_s' declared inside parameter list
 int up_cpu_idlestack(int cpu, FAR struct tcb_s *tcb, size_t stack_size);
                                          ^
../os/src/sched/clock/clock_gettime.c: In function 'clock_gettime':
../os/src/sched/clock/clock_gettime.c:75:3: warning: implicit declaration of function 'DEBUGASSERT' [-Wimplicit-function-declaration]
   DEBUGASSERT(tp != NULL);
   ^
../os/src/sched/clock/clock_gettime.c:167:7: warning: implicit declaration of function 'set_errno' [-Wimplicit-function-declaration]
       set_errno(-ret);
       ^
make: *** [os/src/sched/clock/clock_gettime.o] Error 1

13:30:25 Build Finished (took 705ms)

